fix: update gap between footer and list

--- a/src/components/CreateTodo/view/CreateTodo-styles.scss
+++ b/src/components/CreateTodo/view/CreateTodo-styles.scss
@@ -8,6 +8,7 @@
     align-items: center;
     gap: 1em;
     border-radius: 5px;
+    margin: 2.2em 0;
     padding: 1.1em 1.4em;
 
     &__input {
