--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,7 +36,6 @@ ul {
     &__components-wrapper {
         display: flex;
         flex-direction: column;
-        gap: 2.2em;
         width: 37.6%;
     }
 }
